Ensure grains can be renamed, even if their title is whitespace

--- a/shell/client/_topbar.scss
+++ b/shell/client/_topbar.scss
@@ -233,6 +233,12 @@ body>.topbar {
         display: inline-block;
         padding: 0 8px;
         margin-left: -8px;
+        @media #{$desktop} {
+          min-height: $topbar-height-desktop;
+        }
+        @media #{$mobile} {
+          min-height: $topbar-height-mobile;
+        }
 
         &:hover {
           cursor: pointer;
